# gov_data_layer

./: .commit_message  .commit_msg.txt  .dockerignore  .env.example  .gitignore  .kilocode  .kilorules  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  .secrets.baseline  COMMIT_  COMMIT_MSG.md  Dockerfile  Makefile  README.md  REPORT.md  SPEC.md  TODO.md  _check_schema.py  _check_schema2.py  _commit_msg.txt  _commit_msg3.txt  _commit_msg_qdrant.txt  commit_message.txt  commit_msg.txt  commit_msg2.txt  commit_msg3.txt  commit_msg4.txt  commit_msg5.txt  config.example.yaml  config.yaml  container.md  context.md  docker-compose.yml  lint-test.bat  lint.bat  pl  plan.md  postanovka_gov_data_layer.md  pyproject.toml  (+5 more)
.github/workflows/: ci.yml
adapters/base/: __init__.py  circuit_breaker.py  ingest_pipeline.py  rss_adapter.py  toc_extractor.py  toc_mixin.py
adapters/ocr/: __init__.py  demo_doc_provider.py  ocr_provider.py  stub_ocr.py  tesseract_ocr.py  yandex_vision.py
adapters/pravo/: __init__.py  pravo_adapter.py  pravo_client.py  pravo_parser.py
adapters/stub/: __init__.py  stub_adapter.py
c4/: container.md  context.md
configs/: demo_pipeline.yaml
core/: __init__.py  ing  main.py  odl_service.py  odl_service_protocol.py  regions.py
core/analyzer/: __init__.py  section_analyzer.py
core/api/: __init__.py  app_config.py  config.py  mcp_server.py  rest_server.py
core/cache/: __init__.py
core/errors/: __init__.py  errors.py
core/index/: __init__.py  qdrant_store.py
core/ingest/: __init__.py  chunker.py  embedder.py
core/models/: __init__.py  models.py
core/observability/: __init__.py  config.py  configure.py  logger.py  tracer.py
core/persistence/: __init__.py  db_client.py  mapper.py
core/reranker/: __init__.py  _base.py  pass_through_reranker.py  topic_aware_reranker.py
core/router/: __init__.py
docs/: adr.md  specification.md
docs/agent-integration/: SKILL.md
docs/architecture/: c4-container.md  class-diagram.md  db-schema.md  sequence-diagrams.md
docs/changelog/: v0.2.0.md
docs/reference/: expected_result.md
examples/: SKILL.md
fixtures/: document_types.json  organizations.json  regions.json  rubrics.json  topic.json
fixtures/ocr_results/: 0001202012230060.txt  0001202206200030.txt  0001202212190143.txt  0001202606090026.txt  0001202607060006.txt  7800202607010012.txt
plans/: NEXT_STEPS.md  SPEC.md  actual_metadata_plan.md  adapter_pipeline_completion_plan.md  adr-searchcontext-design.md  adr.md  chunker_analysis.md  container.md  data-structures-design.md  interim_report.md  next_hours_plan.md  persistence_container_analysis.md  persistence_improvement_plan.md  persistence_orm_analysis.md  persistence_postgresql_plan.md  phase6_plan.md  pipline  plan.md  pravo_adapter_decomposition.md  prompt_phase6.md  query_pipeline_plan.md  refactor_tools.md  resilience_plan.md  task10_db_failure_handling_plan.md  task1_upsert_helper_plan.md  task9_fix_varchar36_plan.md  tech_debt_elimination_plan.md
plans/persistence/: persistence_container_analysis.md  task10_db_failure_handling_plan.md  task9_db_adapter_integration_plan.md
scripts/: __init__.py  analyze_documents.py  document_detail_pipeline.py  download_and_ocr.py  enrich_documents.py  fixtures_ingest_pipeline.py  ingest_documents.py  load_data.py  mcp_list_tools.py  mcp_verify.py  search_pipeline.py  search_pipeline_found.py  search_pipeline_notfound.py  test_yandex_vision.py
scripts/queries/: found.txt  notfound.txt
tests/contracts/: test_source_adapter_protocol.py
tests/integration/: conftest.py  test_chunker_pipeline.py  test_ocr_integration.py  test_persistence_helpers.py  test_pravo_production.py  test_pravo_stub_persistence.py  test_pravo_stub_pipeline.py
tests/unit/: conftest.py  test_cache_client.py  test_chunker.py  test_circuit_breaker.py  test_config.py  test_db_client_helpers.py  test_errors.py  test_logger.py  test_mapper.py  test_mcp_server.py  test_models.py  (+11 more)
(+51 files in other folders)
