# pyproject.toml
[project]
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.7.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "sentence-transformers>=2.2.0",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "tomli>=2.0.0; python_version < '3.11'",  # backport для 3.10
    "exceptiongroup>=1.1.0; python_version < '3.11'",  # backport для 3.10
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "detect-secrets>=1.4.0",
    "langfuse>=2.0.0",
]